# secure-mac-mcp

./: .gitignore  .mcp.json  .prettierignore  AGENTS.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
apps/desktop/: README.md  index.html  package.json
apps/desktop/src/: main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
docs/adr/: 0000-template.md  0001-typescript-node-monorepo.md  0002-approval-system.md  0003-desktop-approval-ui.md
plugins/safari/: index.test.ts  index.ts  manifest.json
