[package]
name = "secure-mac-mcp-desktop"
version = "0.1.0"
description = "Desktop approval UI for secure-mac-mcp"
authors = ["secure-mac-mcp"]
edition = "2021"

[lib]
name = "secure_mac_mcp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
